# rust-smart-clone

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml  test.yml
examples/: enum_clone.rs  struct_clone.rs  unit_clone.rs  unnamed_struct_clone.rs
smart-clone/: Cargo.toml
smart-clone-internals/: Cargo.toml  build.rs  lib.rs  src
smart-clone-macros/: Cargo.toml
smart-clone-macros/src/: enum_smart_clone.rs  lib.rs  struct_smart_clone.rs
smart-clone/src/: lib.rs
smart-clone/src/internals/: enum_smart_clone.rs  mod.rs  struct_smart_clone.rs
