[workspace]
resolver = "2"
members = [
    "smart-clone",
    "smart-clone-internals",
]

[workspace.package]
description = "Rust custom-derive macro for Clone with more control on the fields"
version = "0.1.0"
authors = ["Dominique CLAUSE <dom.clause@gmail.com>"]
repository = "https://github.com/dclause/rust-smart-clone"
homepage = "https://github.com/dclause/rust-smart-clone"
readme = "README.md"
license = "MIT"
rust-version = "1.56"
edition = "2021"

[workspace.dependencies]
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
quote = { version = "1.0", features = ["proc-macro"] }
syn = { version = "2.0", features = ["full"] }