[package]
name = "smart-clone-internals"
description = "Inner (private) macros definitions for smart-clone - this crate is used for test coverage purposes only."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false
build = "build.rs"
exclude = ["build.rs"]

[lib]
path = "lib.rs"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
