[package]
name = "smart-clone-macros"
description = "Inner (private) macros definitions for smart-clone - this crate is used for test coverage purposes only."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
