[package]
name = "smart-clone"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
smart-clone-macros = { path = "../smart-clone-macros" }

[[example]]
name = "enum_clone"
path = "../examples/enum_clone.rs"

[[example]]
name = "struct_clone"
path = "../examples/struct_clone.rs"