[package]
name = "smart-clone"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[[example]]
name = "enum_clone"
path = "../examples/enum_clone.rs"

[[example]]
name = "struct_clone"
path = "../examples/struct_clone.rs"

[[example]]
name = "unit_clone"
path = "../examples/unit_clone.rs"

[[example]]
name = "unnamed_struct_clone"
path = "../examples/unnamed_struct_clone.rs"